Feat: section diferenciais

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 2: preconnect font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Enjoy | Construtor Vital</title>
-    <!-- Phosphor Font Link -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="">
-    <!-- 3: display font -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <!-- Fancyapps Library -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css"/>
-    <!-- CSS Links -->
-    <link rel="stylesheet" href="./css/plugins.css">
-    <link rel="stylesheet" href="./css/main.css">
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 2: preconnect font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <title>Enjoy | Construtor Vital</title>
+  <!-- Phosphor Font Link -->
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="">
+  <!-- 3: display font -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!-- Fancyapps Library -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" />
+  <!-- CSS Links -->
+  <link rel="stylesheet" href="./css/plugins.css">
+  <link rel="stylesheet" href="./css/main.css">
+  <!-- Bootstrap CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
 <body>
   <main>
     <!--=====================================================================-->
@@ -35,15 +42,15 @@
             <li><a href="#s__project" class="active js-link" aria-label="projeto link">O Projeto</a></li>
             <li><a href="#s__location" class="js-link" aria-label="localizacao link">Localização</a></li>
             <li><a href="#s__planta" class="js-link" aria-label="plantas link">Plantas</a></li>
-            <li><a href="#s__perspectiva" class="js-link" aria-label="galeria link">Galeria de imagens Realização</a></li>
+            <li><a href="#s__perspectiva" class="js-link" aria-label="galeria link">Galeria de imagens Realização</a>
+            </li>
           </ul>
         </nav>
         <!--=====================================================================-->
         <!--=========== BURGUER MENU  ============-->
         <!--=====================================================================-->
         <div>
-          <button class="hamburger hamburger--collapse" type="button"
-            id="js-menu-button" aria-label="Menu Button">
+          <button class="hamburger hamburger--collapse" type="button" id="js-menu-button" aria-label="Menu Button">
             <span class="hamburger-box">
               <span class="hamburger-inner"></span>
             </span>
@@ -85,7 +92,10 @@
       <div class="s__project__left">
         <span>O projeto</span>
         <img src="./assets/logos/logo-enjoywhite.png" alt="Logo white enjoy" title="Logo white enjoy">
-        <p>Acreditamos que cada amanhecer merece um sorriso, que cada passo dado em casa deve ser leve, e que uma jornada de transformar um lugar em lar e digno de celebração. No Enjoy, cada detalhe e uma expressão do nosso compromisso com sua felicidade.<br> <br> <strong>Gostar não é suficiente, queremos que você ame onde mora.</strong>
+        <p>Acreditamos que cada amanhecer merece um sorriso, que cada passo dado em casa deve ser leve, e que uma
+          jornada de transformar um lugar em lar e digno de celebração. No Enjoy, cada detalhe e uma expressão do nosso
+          compromisso com sua felicidade.<br> <br> <strong>Gostar não é suficiente, queremos que você ame onde
+            mora.</strong>
         </p>
         <a href="" class="btn-quotes">
           <p>Agendar uma visita</p>
@@ -94,13 +104,16 @@
       </div>
       <div class="s__project__right">
         <div class="f-carousel" id="carouselProjeto">
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada"
+            data-src="https://lipsum.app/id/60/1600x1200">
             <img src="https://lipsum.app/id/60/1600x1200" alt="Enjoy Fachada" title="">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada"
+            data-src="https://lipsum.app/id/61/1600x1200">
             <img src="https://lipsum.app/id/61/1600x1200" alt="Enjoy Entrada" title="">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina"
+            data-src="https://lipsum.app/id/62/1600x1200">
             <img src="https://lipsum.app/id/62/1600x1200" alt="Enjoy Piscina">
           </div>
         </div>
@@ -117,14 +130,18 @@
             <span>Localização</span>
           </div>
           <h3>Aproveite cada momento</h3>
-          <p>A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização.</p>
+          <p>A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade
+            garante boa vizinhança e é sinônimo de boa valorização.</p>
           <a href="" class="btn-quotes">
             <p>Olhe no Google Maps</p>
             <i class="ph-bold ph-arrow-right"></i>
           </a>
         </div>
         <div class="s__location__video">
-          <iframe width="660" height="371" src="https://www.youtube.com/embed/w-f7G3Uk_xU?si=W9LoQC4RJq8awdtK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="660" height="371" src="https://www.youtube.com/embed/w-f7G3Uk_xU?si=W9LoQC4RJq8awdtK"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </section>
@@ -136,13 +153,16 @@
       <div class="container">
         <div class="s__info__slide">
           <div class="f-carousel" id="carouselInformation">
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada"
+              data-src="https://lipsum.app/id/60/1600x1200">
               <img src="https://lipsum.app/id/60/1600x1200" alt="Enjoy Fachada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Entrada"
+              data-src="https://lipsum.app/id/61/1600x1200">
               <img src="https://lipsum.app/id/61/1600x1200" alt="Enjoy Entrada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Piscina"
+              data-src="https://lipsum.app/id/62/1600x1200">
               <img src="https://lipsum.app/id/62/1600x1200" alt="Enjoy Piscina">
             </div>
           </div>
@@ -239,7 +259,8 @@
       <div class="container">
         <div class="s__planta__slide">
           <div class="f-carousel" id="carouselPlanta">
-            <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta" data-src="./assets/bg/bg-plantas.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta"
+              data-src="./assets/bg/bg-plantas.png">
               <img src="./assets/bg/bg-plantas.png" alt="Enjoy Planta" title="">
               <div class="slide__text">
                 <h3>Modelo Planta <br> Tipo A</h3>
@@ -247,7 +268,8 @@
                 <span>Finais 01 | 02 | 03 | 04 | 05 | 06</span>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta" data-src="./assets/bg/bg-plantas.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPlanta" data-caption="Enjoy Planta"
+              data-src="./assets/bg/bg-plantas.png">
               <img src="./assets/bg/bg-plantas.png" alt="Enjoy Planta" title="">
               <div class="slide__text">
                 <h3>Modelo Planta</h3>
@@ -267,25 +289,29 @@
       <div class="container">
         <div class="s__perspectiva__slide">
           <div class="f-carousel" id="carouselPerspectiva">
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01"
+              data-src="./assets/bg/bg-fachadaenjoy.png">
               <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01"
+              data-src="./assets/bg/bg-fachadaenjoy.png">
               <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01"
+              data-src="./assets/bg/bg-fachadaenjoy.png">
               <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01"
+              data-src="./assets/bg/bg-fachadaenjoy.png">
               <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
               <div class="slide__info">
                 <p>Apartamento 01</p>
@@ -301,7 +327,7 @@
     <!--=====================================================================-->
     <section class="" id="s__form">
       <div class="container">
-        
+
       </div>
     </section>
 
@@ -310,8 +336,32 @@
     <!--=====================================================================-->
     <section class="" id="s__diferenciais">
       <div class="container">
+
+        <div class="card">
+          <h1>Nossos Diferenciais</h1>
+          <div class="card-content active">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porta mattis urna, ac mollis arcu tempor id.
+              Sed rutrum metus eu tellus venenatis congue. Aliquam eleifend justo dignissim tristique dapibus. Maecenas
+              rutrum, diam ac dapibus sodales, diam risus faucibus mi, eu fringilla mi quam ut felis.</p>
+          </div>
+          <p class="depoimentos">Veja depoimentos de nossos clientes</p>
+          <div class="controls">
+            <button class="prev-btn">Anterior</button>
+            <button class="next-btn">Próximo</button>
+          </div>
+        </div>
+
+        <div class="video">
+          <iframe width="660" height="371" src="https://www.youtube.com/embed/4lLtOrLtPpY" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+
+
       </div>
     </section>
+
 
     <!--=====================================================================-->
     <!--=========== #9 REALIZACAO  ============-->
@@ -322,15 +372,30 @@
           <h1>Realização</h1>
 
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
+            ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
+            tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
+            bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta
+            tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis
+            arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit.
 
             <br><br>
 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
+            ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
+            tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
+            bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta
+            tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis
+            arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit.
 
             <br><br>
 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
+            ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
+            tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
+            bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta
+            tempor. Vivamus placerat vitae enim non blandit. Mauris aliquet mi vel justo eleifend eleifend. Sed lobortis
+            arcu sapien, eget sagittis sapien sollicitudin nec. Curabitur ac aliquam elit.
 
 
           </p>
@@ -351,7 +416,7 @@
       <div class="container">
         <div class="left">
           <img src="./assets/logos/logo-vitalwhite.png" alt="Qualidade">
-        </div>  
+        </div>
         <div class="center">
           <h1>Endereço</h1>
           <ul>
@@ -371,7 +436,7 @@
             <li><a>(35) 9 9167-3502</a></li>
             <li><a>contato@construtoravital.com</a></li>
           </ul>
-        
+
           <div class="icons">
             <a href="https://www.facebook.com/seu_perfil" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://www.youtube.com/seu_canal" target="_blank"><i class="fab fa-youtube"></i></a>
