--- a/index.html
+++ b/index.html
@@ -268,25 +268,33 @@
         <div class="s__perspectiva__slide">
           <div class="f-carousel" id="carouselPerspectiva">
             <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
-              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__image">
+                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              </div>
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
             </div>
             <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
-              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__image">
+                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              </div>
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
             </div>
             <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
-              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__image">
+                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              </div>
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
             </div>
             <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
-              <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              <div class="slide__image">
+                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+              </div>
               <div class="slide__info">
                 <p>Apartamento 01</p>
               </div>
@@ -301,7 +309,13 @@
     <!--=====================================================================-->
     <section class="" id="s__form">
       <div class="container">
+        <div class="s__form__title">
+          <h2>Fale agora mesmo conosco</h2>
+          <p>Nao perca essa oportunidade</p>
+        </div>
+        <div class="s__form__bottom">
 
+        </div>
       </div>
     </section>
 
