--- a/index.html
+++ b/index.html
@@ -310,11 +310,42 @@
     <section class="" id="s__form">
       <div class="container">
         <div class="s__form__title">
-          <h2>Fale agora mesmo conosco</h2>
+          <h3>Fale agora mesmo conosco</h3>
           <p>Nao perca essa oportunidade</p>
         </div>
         <div class="s__form__bottom">
-
+          <form id="" action="" method="post">
+            <div class="form-group">
+              <label for="contactMethod">Forma de Contato:</label><br>
+              <select name="contactMethod" id="contactMethod" required>
+                <option value="" disabled selected>Selecione uma opção</option>
+                <option value="email">Email</option>
+                <option value="phone">Telefone</option>
+                <option value="whatsapp">WhatsApp</option>
+                <option value="sms">SMS</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="firstName">Nome:</label><br>
+              <input type="text" name="firstName" id="firstName" placeholder="Nome" required>
+            </div>
+            <div class="form-group">
+              <label for="email">E-mail:</label><br>
+              <input type="text" name="email" id="email" placeholder="E-mail" required>
+            </div>
+            <div class="form-group">
+              <label for="phone">Telefone: <span>(Opcional)</span></label><br>
+              <input type="number" name="phone" id="phone">
+            </div>
+            <div class="form-group">
+              <label for="mensagem">Mensagem:</label><br>
+              <textarea name="mensagem" id="mensagem" rows="2" cols="50"></textarea>
+            </div>
+            <!-- === END OF HIDDEN INPUT === -->
+            <button class="button-modal-form" type="submit">
+              <span>ENVIAR</span>
+            </button>
+          </form>
         </div>
       </div>
     </section>
