--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
       </div>
       <div class="s__project__right">
         <div class="f-carousel" id="carouselProjeto">
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
-            <img src="https://lipsum.app/id/60/1600x1200" alt="Enjoy Fachada" title="">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Fachada" data-src="./assets/bg/image-01.jpg">
+            <img src="./assets/bg/image-01.jpg" alt="Enjoy Fachada" title="">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
-            <img src="https://lipsum.app/id/61/1600x1200" alt="Enjoy Entrada" title="">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Entrada" data-src="./assets/bg/image-02.jpg">
+            <img src="./assets/bg/image-02.jpg" alt="Enjoy Entrada" title="">
           </div>
-          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
-            <img src="https://lipsum.app/id/62/1600x1200" alt="Enjoy Piscina">
+          <div class="f-carousel__slide" data-fancybox="gallery" data-caption="Enjoy Piscina" data-src="./assets/bg/image-07.jpg">
+            <img src="./assets/bg/image-07.jpg" alt="Enjoy Piscina">
           </div>
         </div>
       </div>
@@ -118,7 +118,7 @@
           </div>
           <h3>Aproveite cada momento</h3>
           <p>A localização do empreendimento ENJOY e privilegiada. Ao lado dos bairros de mais prestígio da cidade garante boa vizinhança e é sinônimo de boa valorização.</p>
-          <a href="" class="btn-quotes">
+          <a href="https://maps.app.goo.gl/pDvPHXjv4M99TPKd8" class="btn-quotes" target="_blank">
             <p>Olhe no Google Maps</p>
             <i class="ph-bold ph-arrow-right"></i>
           </a>
@@ -136,14 +136,14 @@
       <div class="container">
         <div class="s__info__slide">
           <div class="f-carousel" id="carouselInformation">
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada" data-src="https://lipsum.app/id/60/1600x1200">
-              <img src="https://lipsum.app/id/60/1600x1200" alt="Enjoy Fachada" title="">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Fachada" data-src="./assets/bg/image-08.jpg">
+              <img src="./assets/bg/image-08.jpg" alt="Enjoy Fachada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Entrada" data-src="https://lipsum.app/id/61/1600x1200">
-              <img src="https://lipsum.app/id/61/1600x1200" alt="Enjoy Entrada" title="">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Entrada" data-src="./assets/bg/image-07.jpg">
+              <img src="./assets/bg/image-07.jpg" alt="Enjoy Entrada" title="">
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Piscina" data-src="https://lipsum.app/id/62/1600x1200">
-              <img src="https://lipsum.app/id/62/1600x1200" alt="Enjoy Piscina">
+            <div class="f-carousel__slide" data-fancybox="galleryInfo" data-caption="Enjoy Piscina" data-src="./assets/bg/image-05.png">
+              <img src="./assets/bg/image-05.png" alt="Enjoy Piscina">
             </div>
           </div>
         </div>
@@ -155,21 +155,44 @@
                 <i class="ph ph-blueprint"></i>
               </div>
               <div>
-                <span>
-                  Numero de andares
-                </span>
+                <span>Área do terreno</span>
+                <p>1.377,77m2</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="ph ph-elevator"></i>
+              </div>
+              <div>
+                <span>Número de elevadores</span>
+                <p>02 elevadores</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="ph ph-building-apartment"></i>
+              </div>
+              <div>
+                <span>Número de unidade</span>
+                <p>100</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <i class="ph ph-building"></i>
+              </div>
+              <div>
+                <span>Número de andares</span>
                 <p>10 andares</p>
               </div>
             </li>
             <li>
               <div class="icon">
-                <i class="ph ph-building-office"></i>
+                <i class="ph ph-garage"></i>
               </div>
               <div>
-                <span>
-                  Numero de andares
-                </span>
-                <p>10 andares</p>
+                <span>Área privativa</span>
+                <p>45m2 - aprox.</p>
               </div>
             </li>
             <li>
@@ -177,54 +200,26 @@
                 <i class="ph ph-car"></i>
               </div>
               <div>
-                <span>
-                  Numero de andares
-                </span>
-                <p>10 andares</p>
+                <span>Vagas</span>
+                <p>01 por unidade</p>
               </div>
             </li>
             <li>
               <div class="icon">
-                <img src="./assets/icons/icon-andares.png" alt="">
+                <i class="ph ph-building"></i>
               </div>
               <div>
-                <span>
-                  Numero de andares
-                </span>
-                <p>10 andares</p>
+                <span>Numero de torre</span>
+                <p>01</p>
               </div>
             </li>
             <li>
               <div class="icon">
-                <img src="./assets/icons/icon-andares.png" alt="">
+                <i class="ph ph-storefront"></i>
               </div>
               <div>
-                <span>
-                  Numero de andares
-                </span>
-                <p>10 andares</p>
-              </div>
-            </li>
-            <li>
-              <div class="icon">
-                <img src="./assets/icons/icon-andares.png" alt="">
-              </div>
-              <div>
-                <span>
-                  Numero de andares
-                </span>
-                <p>10 andares</p>
-              </div>
-            </li>
-            <li>
-              <div class="icon">
-                <img src="./assets/icons/icon-andares.png" alt="">
-              </div>
-              <div>
-                <span>
-                  Numero de andares
-                </span>
-                <p>10 andares</p>
+                <span>Areas comuns</span>
+                <p><span>Hall entrada,<br> espaco fitness, brinquedoteca, WC, <br>espaco gourmet e piscina.</span></p>
               </div>
             </li>
           </ul>
@@ -275,28 +270,28 @@
                 <p>Apartamento 01</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/image-05.png">
               <div class="slide__image">
-                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/image-05.png" alt="Enjoy Apartamento 01" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 01</p>
+                <p>Apartamento 02</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/image-02.jpg">
               <div class="slide__image">
-                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/image-02.jpg" alt="Enjoy Apartamento 01" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 01</p>
+                <p>Apartamento 03</p>
               </div>
             </div>
-            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/bg-fachadaenjoy.png">
+            <div class="f-carousel__slide" data-fancybox="galleryPerspectiva" data-caption="Enjoy Apartamento 01" data-src="./assets/bg/image-04.jpg">
               <div class="slide__image">
-                <img src="./assets/bg/bg-fachadaenjoy.png" alt="Enjoy Apartamento 01" title="">
+                <img src="./assets/bg/image-04.jpg" alt="Enjoy Apartamento 01" title="">
               </div>
               <div class="slide__info">
-                <p>Apartamento 01</p>
+                <p>Apartamento 04</p>
               </div>
             </div>
           </div>
@@ -371,33 +366,33 @@
     <!--=====================================================================-->
     <footer id="s__footer">
       <div class="container">
-        <div class="left">
-          <img src="./assets/logos/logo-vitalwhite.png" alt="Qualidade">
+        <div class="s__footer__left">
+          <img src="./assets/logos/logo-vitalwhite.png" alt="Construtora Vital Logo">
         </div>
-        <div class="center">
-          <h1>Endereço</h1>
-          <ul>
-            <li><a>Rua Capitão Afonso Junqueira, 290 - Centro</a></li>
-            <li><a>Poços de Caldas - Minas Gerais</a></li>
-            <li><a>CEP: 37701-042</a></li>
-          </ul>
-          <ul>
-            <li><a>Razão Social – VITAL Incorporadora e Administradora Ltda.</a></li>
-            <li><a>CNPJ – 14.965.449/0001-07</a></li>
-          </ul>
-        </div>
-        <div class="right">
-          <h1>Fale Conosco</h1>
-          <ul>
-            <li><a>(35) 3716-2950</a></li>
-            <li><a>(35) 9 9167-3502</a></li>
-            <li><a>contato@construtoravital.com</a></li>
-          </ul>
-          <div class="icons">
-            <a href="https://www.facebook.com/seu_perfil" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.youtube.com/seu_canal" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a href="https://www.instagram.com/seu_perfil" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://wa.me/seu_numero_de_telefone" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <div class="s__footer__nav">
+          <div class="s__footer__nav__center">
+            <h3>Endereço</h3>
+            <ul>
+              <li><a href="https://www.google.com/maps/search/?api=1&query=Rua+Capitão+Afonso+Junqueira+290,+Centro,+Poços+de+Caldas,+Minas+Gerais,+CEP+37701-042" target="_blank" title="Clique aqui para visualizar no mapa">Rua Capitão Afonso Junqueira, 290 - Centro</a></li>
+              <li><a href="https://www.google.com/maps/search/?api=1&query=Rua+Capitão+Afonso+Junqueira+290,+Centro,+Poços+de+Caldas,+Minas+Gerais,+CEP+37701-042" target="_blank" title="Clique aqui para visualizar no mapa">Poços de Caldas - Minas Gerais</a></li>
+              <li><a href="https://www.google.com/maps/search/?api=1&query=Rua+Capitão+Afonso+Junqueira+290,+Centro,+Poços+de+Caldas,+Minas+Gerais,+CEP+37701-042" target="_blank" title="Clique aqui para visualizar no mapa">CEP: 37701-042</a></li>
+              <li>Razão Social – VITAL Incorporadora e Administradora Ltda.</li>
+              <li>CNPJ – 14.965.449/0001-07</li>
+            </ul>
+          </div>
+          <div class="s__footer__nav__center">
+            <h3>Fale Conosco</h3>
+            <ul>
+              <li><a href="tel:+553537162950">(35) 3716-2950</a></li>
+              <li><a href="tel:+553591673502">(35) 9 9167-3502</a></li>
+              <li><a href="mailto:contato@construtoravital.com">contato@construtoravital.com</a></li>
+            </ul>
+            <div class="icons">
+              <a href="https://www.facebook.com/seu_perfil" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.youtube.com/seu_canal" target="_blank"><i class="fab fa-youtube"></i></a>
+              <a href="https://www.instagram.com/seu_perfil" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="https://wa.me/seu_numero_de_telefone" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            </div>
           </div>
         </div>
       </div>
