--- a/index.html
+++ b/index.html
@@ -350,6 +350,20 @@
     <!--=====================================================================-->
     <section class="" id="s__diferenciais">
       <div class="container">
+        <div class="card">
+          <h1>Nossos Diferenciais</h1>
+          <div class="card-content active">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porta mattis urna, ac mollis arcu tempor id. Sed rutrum metus eu tellus venenatis congue. Aliquam eleifend justo dignissim tristique dapibus. Maecenas rutrum, diam ac dapibus sodales, diam risus faucibus mi, eu fringilla mi quam ut felis.</p>
+          </div>
+          <p class="depoimentos">Veja depoimentos de nossos clientes</p>
+          <div class="controls">
+            <button class="prev-btn">Anterior</button>
+            <button class="next-btn">Próximo</button>
+          </div>
+        </div>
+        <div class="s__location__video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4lLtOrLtPpY?si=GHu5v2a3PIvHxxQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
 
@@ -358,6 +372,30 @@
     <!--=====================================================================-->
     <section class="" id="s__realizacao">
       <div class="container">
+        <div class="container">
+          <div class="left">
+            <h1>Realização</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
+              ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
+              tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
+              bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus
+              <br><br>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
+              ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
+              tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
+              bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus sodales lacus nec porta
+              <br><br>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl lorem, maximus nec eros eu, euismod
+              ultrices arcu. In auctor pharetra arcu in posuere. Proin quis venenatis risus. Proin eget nunc a ex laoreet
+              tempus at non lorem. Integer pretium interdum velit, sollicitudin gravida sem pellentesque nec. Duis egestas
+              bibendum metus et tempor. Etiam semper tortor eu libero sodales finibus. Vivamus
+            </p>
+          </div>
+          <div class="right">
+            <img src="./assets/logos/logo-vitalblack.png" alt="">
+          </div>
+        </div>
       </div>
     </section>
 
