--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- 2: preconnect font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Enjoy | Construtor Vital</title>
+    <title>Enjoy | Construtora Vital</title>
     <!-- Phosphor Font Link -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <!-- Favicon -->
